data/derived/comb/progs/unify/prog1970.ml.out
Characters 69-75:
  let rec digitsHelper n l = if n = 0 then l else (n/10) (n mod 10::l)
                                                  ^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
